# jacscanomaly

./: .gitignore  CHANGELOG.md  LICENSE  README.md  citation.cff  pyproject.toml
example/: example.ipynb  example_data.npy
src/data/: earth_annual_parallax_table.txt  earth_anual_parallax_table.csv
src/jacscanomaly/: __init__.py  anomaly_models.py  config.py  extract.py  finder.py  magnification.py  models.py  objective.py  parallax.py  photometry.py  plot.py  pspl.py  runner.py  seasons.py  singlelens.py  singlelens_fit.py  singlelens_model.py  trajectory.py  utils.py
tests/: parallax_test.ipynb
